arrancuza los endpoints

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --verbose --detectOpenHandles"
   },
   "author": "mateo.schiro8",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
